      generally not part of the build and only there for help for IDEs).
    * cgo_library's 'package' argument has been changed to 'out' to be more consistent with
      other rules (most notably go_library).
    * cgo_library and cgo_test now have a setting in the config describing what they should
      use for CC.
    * plz watch now discards events that do not relate to source files it cares about
      (previously it would fire on any event in a relevant directory).
    * include_defs and the cxx_ forms of the cc_* rules are now only available in Bazel
      compatibility mode (which essentially also covers Buck now too).


Version 5.5.4
-------------

    * Fix a bug where multiple filegroups writing the same file could race with one another.

Version 5.5.3
-------------

    * bugfix: make sh_binary work with and without dependencies
    * sh_binary switched to use the same shebang as the original script (when there
      are dependencies)

Version 5.5.2
-------------

    * Increased maximum message size limit on RPC cache server to 100MB since at some
      point gRPC started limiting it, and their 4MB default is too low for this case.
    * Small fix for plz watch for targets with named sources.


Version 5.5.1
-------------

    * Fixed several potential sources of nondeterminism in various places.


Version 5.5.0
-------------

    * Linter can now suppress warnings over an entire file by adding a line with only
      the suppression comment on it.
    * Support for adding generic properties to the config which makes it less awkward to
      write third-party rules that want to be able to set such things.
    * Log file is always written (there seems to be no real performance penalty)
    * `plz query revdeps` correctly identifies subincludes


Version 5.4.1
-------------

    * Fixed name of please_build_linter to be consistent between .deb and tarballs.


Version 5.4.0
-------------
